--- a/frontend_dist/assets/i18n/en.json
+++ b/frontend_dist/assets/i18n/en.json
@@ -63,6 +63,7 @@
   "elements": {
     "button": {
       "cancel": "Cancel",
+      "returnToGame": "Return to game",
       "confirm": "Confirm",
       "send": "Send",
       "add": "Add",
