--- a/frontend_dist/assets/i18n/uk.json
+++ b/frontend_dist/assets/i18n/uk.json
@@ -3,6 +3,7 @@
   "games": {
     "train": {
       "name": "Ticket to ride",
+      "description": "Ticket to Ride — це пригодницька настільна гра, у якій гравці збирають і розігрують відповідні картки поїздів, щоб отримати залізничні маршрути, що з’єднують міста континету! Ticket to Ride ідеально підходить для досвідчених гравців, сімей і тих, хто тільки починає займатися цим хобі",
       "routes": "Завершені маршрути",
       "length": "Найдовший маршрут",
       "cars": "Потяги",
@@ -12,13 +13,16 @@
     },
     "uno": {
       "name": "Уно",
+      "description": "UNO — це карткова гра для кількох гравців, мета якої — першим позбутися всіх карт",
       "round": "Раунд"
     },
     "thousand": {
-      "name": "Тисяча - 1000"
+      "name": "Тисяча - 1000",
+      "description": "Мета полягає в тому, щоб набрати понад 1000 очок, перший гравець, який це зробить, виграє гру"
     },
     "rummy": {
-      "name": "Румі"
+      "name": "Румі",
+      "description": "Раммі - популярна сімейна гра. Все залежить від стратегії та удачі! Гравці намагаються першими зіграти всі тайли у своїй стійці, розміщуючи їх серіями та групами"
     }
   },
   "modules": {
@@ -32,7 +36,9 @@
       "byWinsToGames": "Рейтинг за кількістю перемог до зіграних партій",
       "winsToGames": "%",
       "gamesCount": "Партій",
-      "wins": "Перемог"
+      "times": "раз",
+      "wins": "Перемог",
+      "played": "Зіграно"
     },
     "games": {
       "name": "Ігри",
