--- a/points/src/assets/i18n/uk.json
+++ b/points/src/assets/i18n/uk.json
@@ -22,7 +22,7 @@
     },
     "rummy": {
       "name": "Румі",
-      "description": "Раммі - популярна сімейна гра. Все залежить від стратегії та удачі! Гравці намагаються першими зіграти всі тайли у своїй стійці, розміщуючи їх серіями та групами"
+      "description": "Румі - популярна сімейна гра. Все залежить від стратегії та удачі! Гравці намагаються першими зіграти всі тайли у своїй стійці, розміщуючи їх серіями та групами"
     }
   },
   "modules": {
