--- a/frontend_dist/assets/i18n/uk.json
+++ b/frontend_dist/assets/i18n/uk.json
@@ -27,7 +27,9 @@
   },
   "modules": {
     "settings": {
-      "name": "Налаштування"
+      "name": "Налаштування",
+      "switchToDark": "Темний режим",
+      "switchToLight": "Світлий режим"
     },
     "analytics": {
       "name": "Аналітика",
